--- a/public/css/game.css
+++ b/public/css/game.css
@@ -60,3 +60,20 @@ canvas {
 #goto-game-container{
     margin-top: 20px;
 }
+
+.player-board{
+    margin-bottom: 10px;
+}
+.player-board > div {
+    width: 200px;
+    margin: 0 auto;
+}
+.next-in-turn div{
+    box-shadow: 0 0 3px rgba(255,0,0,1);
+    border-color: rgba(255,0,0,0.75);
+    border: 1px solid rgba(255,0,0,0.75);
+    border-radius: 3px;
+}
+.not-allowed{
+    cursor: not-allowed;
+}
