--- a/public/css/game.css
+++ b/public/css/game.css
@@ -66,9 +66,15 @@ canvas {
     width: 200px;
     margin: 0 auto;
 }
-.next-in-turn div{
+
+.player-a.next-in-turn div{
+    box-shadow: 0 0 3px rgba(0,0,255,1);
+    border: 1px solid rgba(0,0,255,0.75);
+    border-radius: 3px;
+}
+
+.player-b.next-in-turn div{
     box-shadow: 0 0 3px rgba(255,0,0,1);
-    border-color: rgba(255,0,0,0.75);
     border: 1px solid rgba(255,0,0,0.75);
     border-radius: 3px;
 }
@@ -81,7 +87,7 @@ canvas {
     canvas{
         width: 100vw;
         height: 100vw;
-        max-width: ;
+        max-width: 100vw;
         max-height: 100vw;
     }
     .score-board{
